--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.11",
     "eslint-config-airbnb": "^16.1.0",
+    "style-loader": "^0.20.3",
     "webpack": "^2.2.1",
     "webpack-cli": "^2.0.14"
   }
