--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "dev:react": "webpack -d --watch"
   },
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.3",
+    "mongoose": "^5.0.14",
     "react": "^16.3.1",
     "react-dom": "^16.3.1"
   },
